repair nav on mobile

--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -430,7 +430,7 @@ i.box-circle-solid{
 	align-items:center;
 	height:95%;
 	position: relative;
-	z-index: 1;
+	z-index: 0;
 }
 .intro.intro-small{
 	height: 60%;
